Fix slides overflowing

--- a/slides/custom.scss
+++ b/slides/custom.scss
@@ -49,7 +49,7 @@ $code-block-bg: $tertiary-color;
 }
 
 .reveal pre.sourceCode code {
-  max-height: 1000px;
+  max-height: 350px;
 }
 
 h1.title {
